Test/dafny0/GhostITEResolution.dfy.expect
GhostITEResolution.dfy(18,10): Error: ghost variables such as y are allowed only in specification contexts. y was inferred to be ghost based on its declaration or initialization.
GhostITEResolution.dfy(66,12): Error: ghost variables such as y are allowed only in specification contexts. y was inferred to be ghost based on its declaration or initialization.
2 resolution/type errors detected in GhostITEResolution.dfy
